--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" type="text/css" crossorigin="anonymous" data-hid="316d93a">
-<link rel="stylesheet" href="/salsa-moves/nuxt/entry.BcoXEn4V.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/DfdSU9NC.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CUiDN3qB.js">
+<link rel="stylesheet" href="/salsa-moves/nuxt/entry.CLZdPl45.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/CzWyb7Sa.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CMYDY59n.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Ck2eElWx.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/uW4-uwL7.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/BrqPrP4r.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CLOrjajV.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/C5U8OIC7.js">
-<script type="module" src="/salsa-moves/nuxt/DfdSU9NC.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733601856223,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/salsa-moves/",buildId:"8f07adc3-6ea3-4bd2-b933-ef5ef551676c",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/BujXgAp1.js">
+<script type="module" src="/salsa-moves/nuxt/CzWyb7Sa.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733624890921,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/salsa-moves/",buildId:"41ba5f56-ffb1-4490-887e-78be77ecefb9",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
