--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Salsa Moves</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" type="text/css" crossorigin="anonymous" data-hid="316d93a">
-<link rel="stylesheet" href="/salsa-moves/nuxt/entry.CLZdPl45.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/C_-b2ruk.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Cbdq2jfA.js">
+<link rel="stylesheet" href="/salsa-moves/nuxt/entry.B77dLYck.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/H29o7xc0.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CzbkGuoH.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/kJSqR3Oj.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CF_0IBaP.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CrtPfSQP.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CbnnaWVB.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/BGc3_Ney.js">
-<script type="module" src="/salsa-moves/nuxt/C_-b2ruk.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733673621497,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/salsa-moves/",buildId:"422079b7-ae29-48b7-85cb-9db9605cbaae",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CnGxYzBm.js">
+<script type="module" src="/salsa-moves/nuxt/H29o7xc0.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Salsa Moves"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733709720210,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/salsa-moves/",buildId:"1dc35ce9-00ae-45d4-8574-b30574b10ccd",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
