--- a/.output/public/404.html
+++ b/.output/public/404.html
@@ -3,14 +3,14 @@
 <title>Salsa Moves</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" type="text/css" crossorigin="anonymous" data-hid="316d93a">
 <link rel="stylesheet" href="/salsa-moves/nuxt/entry.B77dLYck.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/268DaRdb.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/BDTaTKLu.js">
+<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/Dsq-v106.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Cvv3-CPH.js">
 <link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DDVEv-Vk.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Cq5PBx3k.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CXGz9bHf.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Dht6mC4t.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/Bma0IAuY.js">
-<script type="module" src="/salsa-moves/nuxt/268DaRdb.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Salsa Moves"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733790877497,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/salsa-moves/",buildId:"98e0da0c-6de2-4d58-b24a-54ec772512d4",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CwTf3VCn.js">
+<script type="module" src="/salsa-moves/nuxt/Dsq-v106.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Salsa Moves"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1733958929037,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{mediaUrl:"https://media.githubusercontent.com/media/stas-sl/salsa-moves/refs/heads/main/media/moves/",storeUrl:"https://salsa-moves.curious.by/"},app:{baseURL:"/salsa-moves/",buildId:"54639b9a-4d81-43ee-a8c0-0e231243f45b",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
