--- a/.output/public/test3/index.html
+++ b/.output/public/test3/index.html
@@ -3,15 +3,15 @@
 <title>Salsa Moves</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" type="text/css" crossorigin="anonymous" data-hid="316d93a">
 <link rel="stylesheet" href="/salsa-moves/nuxt/entry.B77dLYck.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/Cgwfw3O2.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/KnuxmHVb.js">
+<link rel="modulepreload" as="script" crossorigin href="/salsa-moves/nuxt/DIJIciBX.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/BSauIxa9.js">
 <link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DlAUqK2U.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-404.CoZKRZXM.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/B73obg8O.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/CsCKG_0t.js">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DV5WENA_.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/DoF2gheh.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/E6rUM9Hg.js">
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/LeQbkVRr.js">
 <link rel="prefetch" as="style" crossorigin href="/salsa-moves/nuxt/error-500.D6506J9O.css">
-<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/D4UTBfxx.js">
-<script type="module" src="/salsa-moves/nuxt/Cgwfw3O2.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"Salsa Moves"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1734487511205,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{mediaUrl:"https://media.githubusercontent.com/media/stas-sl/salsa-moves/refs/heads/main/media/moves/",storeUrl:"https://salsa-moves.curious.by/"},app:{baseURL:"/salsa-moves/",buildId:"cab3b997-7b95-4e11-9518-0af8d6de3f87",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/salsa-moves/nuxt/D4b32DgZ.js">
+<script type="module" src="/salsa-moves/nuxt/DIJIciBX.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"Salsa Moves"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1734540417150,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{mediaUrl:"https://salsa-moves.curious.by/media/moves/",storeUrl:"https://salsa-moves.curious.by/"},app:{baseURL:"/salsa-moves/",buildId:"b3d4fa2e-c2ad-449b-a884-669a37bad2fc",buildAssetsDir:"/nuxt/",cdnURL:""}}</script></body></html>
